--- a/ansible-playbooks/start-api.yml
+++ b/ansible-playbooks/start-api.yml
@@ -1,21 +1,13 @@
 - hosts: master
   become: yes
   tasks:
-    - name: install git
+    - name: check kube
       apt:
-        name: git
+        name: kubectl
         state: present
         force: yes
 
     - name: pull from git
-      git:
-        repo: https://github.com/ameeno/nodejs-mongo-api.git
-        dest: /home/ubuntu/nodejs-mongo-api
-        update: yes
-        version: master
-
-    - name: Deploy Kubernetes on Cluster
-      command: sh /home/ubuntu/nodejs-mongo-api/Kubernetes-k8s-yaml/kubectl.sh
-
-    - name: Enable AutoScaling
-      command: sh /home/ubuntu/nodejs-mongo-api/Kubernetes-k8s-yaml/autoscale.sh
+      k8s:
+        state: present
+        src: https://raw.githubusercontent.com/ameeno/cogito-deployment-kube/master/kube.yaml
