--- a/ansible-playbooks/kube-dependencies.yml
+++ b/ansible-playbooks/kube-dependencies.yml
@@ -1,44 +1,82 @@
 - hosts: all
   become: yes
+  become_user: root
   tasks:
-   - name: install Docker
-     apt:
-       name: docker.io
-       state: present
-       update_cache: true
+    - name: install Docker
+      apt:
+        name: docker.io
+        state: present
+        update_cache: true
 
-   - name: install APT Transport HTTPS
-     apt:
-       name: apt-transport-https
-       state: present
+    - name: install APT Transport HTTPS
+      apt:
+        name: apt-transport-https
+        state: present
 
-   - name: add Kubernetes apt-key
-     apt_key:
-       url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-       state: present
+    - name: add Kubernetes apt-key
+      apt_key:
+        url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        state: present
 
-   - name: add Kubernetes' APT repository
-     apt_repository:
-      repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
-      state: present
-      filename: 'kubernetes'
+    - name: add Kubernetes' APT repository
+      apt_repository:
+        repo: deb http://apt.kubernetes.io/ kubernetes-xenial main
+        state: present
+        filename: "kubernetes"
 
-   - name: install kubelet
-     apt:
-       name: kubelet
-       state: present
-       update_cache: true
+    - name: install kubelet
+      apt:
+        name: kubelet
+        state: present
+        update_cache: true
 
-   - name: install kubeadm
-     apt:
-       name: kubeadm
-       state: present
+    - name: install kubeadm
+      apt:
+        name: kubeadm
+        state: present
+
+    - name: Copy docker daemon to remote
+      shell: |
+        cat > /etc/docker/daemon.json <<EOF
+        {
+          "exec-opts": ["native.cgroupdriver=systemd"],
+          "log-driver": "json-file",
+          "log-opts": {
+            "max-size": "100m"
+          },
+          "storage-driver": "overlay2"
+        }
+        EOF
+
+    - name: Create systemd directory for daemon
+      file:
+        path: /etc/systemd/system/docker.service.d
+        state: directory
+
+    - name: just force systemd to reread configs
+      systemd:
+        daemon_reload: yes
+
+    - name: restart Docker
+      systemd:
+        name: docker
+        state: restarted
+    - name: Disable SWAP since Kubernetes can't work with swap enabled (1/2)
+      shell: |
+        swapoff -a
+
+    - name: Disable SWAP in fstab since Kubernetes can't work with swap enabled (2/2)
+      replace:
+        path: /etc/fstab
+        regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
+        replace: '# \1'
 
 - hosts: master
   become: yes
+  become_user: root
   tasks:
-   - name: install kubectl
-     apt:
-       name: kubectl
-       state: present
-       force: yes
+    - name: install kubectl
+      apt:
+        name: kubectl
+        state: present
+        force: yes
