--- a/ansible-playbooks/workers.yml
+++ b/ansible-playbooks/workers.yml
@@ -1,5 +1,6 @@
 - hosts: master
   become: yes
+  become_user: root
   gather_facts: false
   tasks:
     - name: get join command
@@ -9,7 +10,6 @@
     - name: set join command
       set_fact:
         join_command: "{{ join_command_raw.stdout_lines[0] }}"
-
 
 - hosts: workers
   become: yes
