--- a/docker-playbook.yml
+++ b/docker-playbook.yml
@@ -10,7 +10,7 @@
         group: Ansible # your group
         key_name: # your key name
         vpc_subnet_id: # your subnet
-        instance_type: t2.mirco
+        instance_type: t2.micro
         assign_public_ip: yes
         aws_access_key: # your key
         aws_secret_key: # your sec key
@@ -24,14 +24,14 @@
       add_host:
         hostname: "{{ item.public_ip }}"
         groupname: ec2_server
-      with_items: ec2.instances
+      with_items: "{{ ec2.instances }}"
 
     - name: Wait for SSH to come up
       wait_for:
         host: "{{ item.public_ip }}"
         port: 22
         state: started
-      with_items: ec2.instances
+      with_items: "{{ ec2.instances }}"
 
 - hosts: ec2_server
   become: yes
@@ -39,9 +39,18 @@
   remote_user: ubuntu # for Ubuntu server
   gather_facts: yes
   tasks:
+    - name: Update apt-get repo and cache
+      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+
     - name: install Docker
       apt:
         name: docker.io
+        state: present
+        update_cache: true
+
+    - name: install Docker-Compose
+      apt:
+        name: docker-compose
         state: present
         update_cache: true
 
@@ -64,8 +73,21 @@
       get_url:
         url: https://raw.githubusercontent.com/ameeno/cogito-deployment-kube/master/docker-compose.yml
         dest: /home/ubuntu/docker-compose.yml
-    - name: Run `docker-compose up` again
-      docker_compose:
-        project_src: /home/ubuntu
-        build: yes
-      register: output
+
+    - name: Add the user 'arun' with a bash shell, appending the group 'docker' to the user's groups
+      user:
+        name: ubuntu
+        shell: /bin/bash
+        groups: docker
+        append: yes
+
+    - name: sleep for 30 seconds and continue with play
+      wait_for:
+        timeout: 30
+      delegate_to: localhost
+
+    - name: reset ssh connection to allow user changes to affect 'current login user'
+      meta: reset_connection
+
+    - name: Run `docker-compose up`
+      shell: docker-compose up -d
